--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,23 @@
 # ===============================
 # = DATA SOURCE
 # ===============================
-datasource.driver-class-name=com.mysql.jdbc.Driver
 
-# Connection url for the database "baglab"
-spring.datasource.url =jdbc:mysql://localhost:3306/baglab?useSSL=false&useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+# Set here configurations for the database connection
+
+# Connection url for the database "netgloo_blog"
+#spring.datasource.url = jdbc:mysql://localhost:3306/netgloo_blog?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/baglab?useSSL=false&useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+  #jdbc:mysql://localhost:3306/baglab?useSSL=false&useUnicode=true&characterEncoding=utf8
+#spring.datasource.url = jdbc:mysql://localhost:3306/baglab?useSSL=false&useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+
 
 # Username and password
 spring.datasource.username = root
 spring.datasource.password = root
-#spring.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-#spring.hibernate.hbm2ddl.auto=update
 
+# Keep the connection alive if idle for a long time (needed in production)
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
 
 # ===============================
 # = JPA / HIBERNATE
@@ -21,16 +27,16 @@ spring.datasource.password = root
 # stripped before adding them to the entity manager).
 
 # Show or not log for each sql query
-spring.jpa.show-sql = true
+#spring.jpa.show-sql = true
 
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
 # the project
 spring.jpa.hibernate.ddl-auto = none
 
-
 # Naming strategy
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.DefaultComponentSafeNamingStrategy
+  #org.hibernate.cfg.ImprovedNamingStrategy
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
@@ -41,10 +47,5 @@ spring.datasource.validationQuery = SELECT 1
 
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
 
-#Jackson
-spring.jackson.serialization.indent_output=true
-#Server
-server.port=8080
-
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+# Show or not log for each sql query
+spring.jpa.show-sql = true
