--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,17 @@
 
 # Connection url for the database "netgloo_blog"
 #spring.datasource.url = jdbc:mysql://localhost:3306/netgloo_blog?useSSL=false
-spring.datasource.url = jdbc:mysql://localhost:3306/baglab?useSSL=false&useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/baglab?useSSL=false
   #jdbc:mysql://localhost:3306/baglab?useSSL=false&useUnicode=true&characterEncoding=utf8
 #spring.datasource.url = jdbc:mysql://localhost:3306/baglab?useSSL=false&useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+
+
+
+
+
+
+
+
 
 
 # Username and password
@@ -27,25 +35,60 @@ spring.datasource.validationQuery = SELECT 1
 # stripped before adding them to the entity manager).
 
 # Show or not log for each sql query
+spring.jpa.show-sql = true
+
+# Hibernate ddl auto (create, create-drop, update): with "update" the database
+# schema will be automatically updated accordingly to java entities found in
+# the project
+spring.jpa.hibernate.ddl-auto = update
+
+# Naming strategy
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#-----------------------------------------------------------------------
+
+
+
+
+
+
+# Username and password
+#spring.datasource.username = root
+#spring.datasource.password = root
+
+# Keep the connection alive if idle for a long time (needed in production)
+#spring.datasource.testWhileIdle = true
+#spring.datasource.validationQuery = SELECT 1
+
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
+
+# Use spring.jpa.properties.* for Hibernate native properties (the prefix is
+# stripped before adding them to the entity manager).
+
+# Show or not log for each sql query
 #spring.jpa.show-sql = true
 
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
 # the project
-spring.jpa.hibernate.ddl-auto = none
+#spring.jpa.hibernate.ddl-auto = none
 
 # Naming strategy
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.DefaultComponentSafeNamingStrategy
+#spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.DefaultComponentSafeNamingStrategy
   #org.hibernate.cfg.ImprovedNamingStrategy
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 # Keep the connection alive if idle for a long time (needed in production)
-spring.datasource.testWhileIdle = true
-spring.datasource.validationQuery = SELECT 1
+#spring.datasource.testWhileIdle = true
+#spring.datasource.validationQuery = SELECT 1
 
-spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
+#spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
 
 # Show or not log for each sql query
-spring.jpa.show-sql = true
+#spring.jpa.show-sql = true
