--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 
 # Connection url for the database "netgloo_blog"
 #spring.datasource.url = jdbc:mysql://localhost:3306/netgloo_blog?useSSL=false
-spring.datasource.url = jdbc:mysql://localhost:3306/baglab?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/baglab?useSSL=false&useUnicode=true&characterEncoding=utf8
   #jdbc:mysql://localhost:3306/baglab?useSSL=false&useUnicode=true&characterEncoding=utf8
 #spring.datasource.url = jdbc:mysql://localhost:3306/baglab?useSSL=false&useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 
@@ -40,7 +40,7 @@ spring.jpa.show-sql = true
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
 # the project
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = validate
 
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
@@ -50,7 +50,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #-----------------------------------------------------------------------
 
 
-
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 
 
